llvm/test/CodeGen/MIR/Generic/machine-function-isssa-conflict.mir
# RUN: not llc -run-pass none -o /dev/null %s 2>&1 | FileCheck %s

# Test that computed properties are not conflicting with explicitly set
# properties

---
# CHECK: error: {{.*}}: TestIsSSAOverrideConflict has explicit property IsSSA, but is not valid SSA
name:            TestIsSSAOverrideConflict
isSSA: true
body: |
  bb.0:
    %0:_(s32) = G_IMPLICIT_DEF
    %0:_(s32) = G_IMPLICIT_DEF
...
